Change background color's transparency & code margin adjustments

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -6,18 +6,17 @@
 @import "styles/clock.css";
 
 * {
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: "Source Sans 3", FontAwesome;
-    font-weight: bold;
-    font-size: 16px;
+  /* `otf-font-awesome` is required to be installed for icons */
+  font-family: "Source Sans 3", FontAwesome;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 window#waybar {
-    background: linear-gradient(#333333, @bg-color, #333333);
-    /*border-bottom: 3px solid rgba(100, 114, 125, 0.5);*/
-    color: #ffffff;
-    transition-property: background-color;
-    transition-duration: .5s;
+  background: @bg-color;
+  /*border-bottom: 3px solid rgba(100, 114, 125, 0.5);*/ color: #ffffff;
+  transition-property: background-color;
+  transition-duration: .5s;
 }
 
 window#waybar.hidden {
@@ -34,33 +33,33 @@ window#waybar.solo {
 */
 
 window#waybar.termite {
-    background-color: #3F3F3F;
+  background-color: #3F3F3F;
 }
 
 window#waybar.chromium {
-    background-color: #000000;
-    border: none;
+  background-color: #000000;
+  border: none;
 }
 
 button {
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
-    /* Avoid rounded borders under each button name */
-    border: none;
-    border-radius: 0;
+  /* Use box-shadow instead of border so the text isn't offset */
+  box-shadow: inset 0 -3px transparent;
+  /* Avoid rounded borders under each button name */
+  border: none;
+  border-radius: 0;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
-    background-color: @bg-color;
+  background-color: @bg-color;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
 .modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
+  margin-right: 0;
 }
